--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<div class="desc">
 								<h2>Notary services</h2>
 								<p>
-									Full range of notary services, which is always relevant  and odten required.
+									Full range of notary services, which is always relevant and often required.
 								</p>
 							</div>
 						</div>
