--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@ Helen Winter</p>
                                <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
+                                    <p>Рекомендую Юлию Барсель, всем заинтересованным в положительном решении, возникших юридических проблем.
+В ее лице вы найдете высококвалифицированного адвоката, специалиста по правовым вопросам  не только  канадского законодателства, но и ряда других стран. 
+ Профессионализм, большой опыт работы,  тактичность  и  энергия Юлии, помогли лично мне и многим  другим  людям.  Большое  ей спасибо  за очень качественную  работу.<br/><br/>
+Семешко Марина</p>
+                                  </div>
+                                </div>
+                              </li>
+								<li>
+                                <div class="testimonial-single">                   
+                                  <div class="testimonial-info">
                                     <p>Julia, I would like to say big thank you for helping me out in my situation. You are very professional and knowledgeable lawyer. From the moment i talked to you, you were positive and very helpful. 
 I would highly recommend you to anyone and i was very lucky to have you as my lawyer.<br/><br/>
 Radmila Bagayeva</p>
@@ -312,7 +322,7 @@ Radmila Bagayeva</p>
 					<img src="img/logo.png" alt="Logo">
 				</figure>
 				<p>
-					Copyright &copy; 2018 <br/>Vancouver, BC
+					Copyright &copy; 2019 <br/>Vancouver, BC
 				</p>
 
 			</div>
