--- a/index.html
+++ b/index.html
@@ -251,6 +251,14 @@ Helen Winter</p>
                                   </div>
                                 </div>
                               </li>
+<li>
+                                <div class="testimonial-single">                   
+                                  <div class="testimonial-info">
+                                    <p>It is a pleasure to work with Julia, she is a highly competent and knowledgeable lawyer, dedicated and compassionate. She provides the best legal advice and support. I highly recommend her services.<br/><br/>
+Vita Slobodian</p>
+                                  </div>
+                                </div>
+                              </li>								
                                <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
