--- a/index.html
+++ b/index.html
@@ -270,6 +270,22 @@ Radmila Bagayeva</p>
                                   </div>
                                 </div>
                               </li>
+							  <li>
+                                <div class="testimonial-single">                   
+                                  <div class="testimonial-info">
+                                    <p>Я от всей души благодарна Юлии Барсель за замечательный семинар на тему «Семейное Право в Британской Колумбии», проведенный 19 февраля 2020 для моих клиентов, большинство из которых- недавно прибывшие в Канаду.
+
+В ходе презентации, Юлия грамотно и подробно разьяснила основные, ключевые законоположения и систему Семейного права в Британской Колумбии и показала основные отличия от законодательств стран прежнего проживания слушателей. Освещая основные пути решения возникших конфликтов, она разьяснила порядок решения споров в сфере семейного права и указала на детали, которые очень важны и могут ускользнуть от внимания неподготовленного человека, но впоследствии  могут оказаться решающими факторами для благоприятного завершения конфликта.
+
+Участники семинара получили большое количество информации, предоставленной на высоком профессиональном уровне во время презентации а также в ответ на их вопросы.
+
+Семинар продолжался более двух часов, так как Юлия ответила на все вопросы, кототрые интересовали слушателей.<br/><br/>
+Nina Bobrova<br/>
+
+Settlement Worker in Schools (SWIS)</p>
+                                  </div>
+                                </div>
+                              </li>								
                                <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
