--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@ Radmila Bagayeva</p>
 							  <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
-                                    <p>Я от всей души благодарна Юлии Барсель за замечательный семинар на тему «Семейное Право в Британской Колумбии», проведенный 19 февраля 2020 для моих клиентов, большинство из которых- недавно прибывшие в Канаду.
+                                    <p>Я от всей души благодарна Юлии Барсель за замечательный семинар на тему «Семейное Право в Британской Колумбии», проведенный 19 февраля 2020 для моих клиентов, большинство из которых- недавно прибывшие в Канаду. <br/>
 
-В ходе презентации, Юлия грамотно и подробно разьяснила основные, ключевые законоположения и систему Семейного права в Британской Колумбии и показала основные отличия от законодательств стран прежнего проживания слушателей. Освещая основные пути решения возникших конфликтов, она разьяснила порядок решения споров в сфере семейного права и указала на детали, которые очень важны и могут ускользнуть от внимания неподготовленного человека, но впоследствии  могут оказаться решающими факторами для благоприятного завершения конфликта.
+В ходе презентации, Юлия грамотно и подробно разьяснила основные, ключевые законоположения и систему Семейного права в Британской Колумбии и показала основные отличия от законодательств стран прежнего проживания слушателей. Освещая основные пути решения возникших конфликтов, она разьяснила порядок решения споров в сфере семейного права и указала на детали, которые очень важны и могут ускользнуть от внимания неподготовленного человека, но впоследствии  могут оказаться решающими факторами для благоприятного завершения конфликта. <br/>
 
 Участники семинара получили большое количество информации, предоставленной на высоком профессиональном уровне во время презентации а также в ответ на их вопросы.
 
