--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ Settlement Worker in Schools (SWIS)</p>
 							<ul class="contact-icon">
 								<li><i class="ion ion-ios-telephone"></i> <div>+1-778-888-2420</div></li>
 								<li><i class="ion ion-ios-email"></i> <div><a href="mailto:info@juliabarsel.com">info@juliabarsel.com</a></div></li>
-								<li><i class="ion ion-ios-home"></i> <div>#201-640 West Broadway Vancouver, BC, V5Z 1G4</div></li>
+								<li><i class="ion ion-ios-home"></i> <div>640 West Broadway #201 Vancouver, BC, V5Z 1G4</div></li>
 							</ul>
                             
                         </div>
