--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			      </li>
 			    </ul>
 			    <form class="form-inline">
-				    <a href="#contact" class="btn smooth-link align-middle btn-primary">Need Help?</a>
+				    <a href="#contact" class="btn smooth-link align-middle btn-primary">Need Help? Contact me</a>
 			    </form>
 			  </div>
 		  </div>
@@ -383,7 +383,7 @@ Settlement Worker in Schools (SWIS)</p>
 					
 				  <br/><br/><h5 class="modal-title">Кто бы мог подумать, что нам в нашей жизни придется пройти через такую ​​всемирную пандемию? </h5><hr/>
 				  <p>Мы не думали, что нам придется пережить войну, но пришлось в 1991 году в Израиле. Это очень страшно. Пожалуйста будьте осторожны! При этом я хочу предложить всем своим клиентам следующее: консультации по скайпу, WhatsApp, по телефону, а кроме того, у меня есть ZOOM, и эта платформа обеспечивает полностью все необходимое и достаточное, чтобы провести и получить консультацию лицом к лицу. Мой офис имеет отдельный вход с улицы, я здесь одна, что намного безопаснее. В это время полезно и разумно подумать о планировании вашего наследства, завещаниях, доверенностях и других подобных инструментах, которые помогут вам сейчас и позже. Я здесь для всех, кто нуждается во мне.<br/> Будьте в безопасности, будьте здоровы! Надеемся, что мир объединится против вируса, давайте все сделаем все что необходимо для этого со своей стороны!</p>	
-				<h5 style="float: right; padding-right: 40px;"><i>Truly yours, <br/> Julia Barsel</i></h5>
+				<h5 style="float: right; padding-right: 40px;"><i>Truly yours, <br/> Julia Barsel</i><br/>+1-778-888-2420 </h5>
 				</div>
 			  </div>
 			</div>
