--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="row align-items-center justify-content-center">
 					<div class="col-12 col-md-6">
 						<figure class="about-picture">
-							<img src="img/julia.jpg" alt="Julia Barsel">
+							<img src="img/julia_books.JPG" alt="Julia Barsel">
 						</figure>
 					</div>
 					<div class="col-12 col-md-6">
