--- a/index.html
+++ b/index.html
@@ -265,6 +265,15 @@ We regulate the legal profession in BC, protecting the public interest in the ad
                               <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
+                                    <p>I am very happy with the work that you did to resolve my case. Your efficiency, expertise, and willingness to help with my situation have made it a pleasure to work with you. Thank you.<br/><br/>
+Oleg Vasylev</p>
+                                  </div>
+                                </div>
+                              </li>
+								
+								<li>
+                                <div class="testimonial-single">                   
+                                  <div class="testimonial-info">
                                     <p>I met Julia when I was looking for a person with unique skill set to write an expert report regarding paternity. I needed a lawyer with degree in both Canadian and Russian family law. Julia was the one!  She practiced law in 3 different countries on 3 different languages! She managed to find time for me and my unusual case in her extremely busy schedule to fit my tight timeframes. Like many of self represented persons I did everything in a last moment due to lack of knowledge… <br/>Thank you, Julia, for your help and patience!<br/><br/>
 Helen Winter</p>
                                   </div>
