--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ Settlement Worker in Schools (SWIS)</p>
 								</li>
 								<li><i class="ion ion-ios-home"></i> 
 									<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-										515 West Pender Street, suite 213, Vancouver, BC, V6B 1V5 <span itemprop="addressCountry" style="display: none;">Canada</span>
+										515 West Pender Street, suite 213, Vancouver, BC, V6B 6H5 <span itemprop="addressCountry" style="display: none;">Canada</span>
 									</div>
 								</li>
 							</ul>                            
