--- a/index.html
+++ b/index.html
@@ -262,6 +262,15 @@ We regulate the legal profession in BC, protecting the public interest in the ad
                         
 				            <!-- testimonial slider -->
                             <ul class="testimonial-slider">
+                         <li>
+                                <div class="testimonial-single">                   
+                                  <div class="testimonial-info">
+                                    <p>Нашим адвокатом Юлией Барсель была выполнена сложнейшая работа по ведению семейного наследственного дела в условиях отсутствия завещания. Обстоятельства дела были дополнительно осложнены наличием среди наследников несовершеннолетних детей, в связи с чем требовалось согласование условий администрирования наследства с PGT. Юлией были проведены сложные многоступенчатые переговоры с PGT, одобрение которой было необходимым условием положительного решения суда о назначении гранта об администрировании. Несмотря на сложнейшие стартовые условия и общие задержки в связи с ковидом, Юлии благодаря своим уникальным переговорным и коммуникативным способностям удалось выйти на положительное решение суда всего за 6 месяцев, что кажется просто фантастикой в подобных обстоятельствах! Хочется также отметить, что Юлия не только высочайший профессионал своего дела, обладающий уникальным сочетанием международного и канадского опыта работы адвокатом, но и очень теплый и деликатный человек, вкладывающий душу в свою работу, бережно и поддерживающе обращающийся со своими клиентами, пришедшими к ней в сложных, а зачастую и трагичных жизненных обстоятельствах. Считаю, что мне очень повезло встретить такого профессионала и человека! Возможно, мой отзыв будет выглядеть слишком личным, но я не могу сдерживать свои чувства благодарности в сухих формальных фразах.<br/><br/>
+Валентин</p>
+                                  </div>
+                                </div>
+                              </li>
+								
                               <li>
                                 <div class="testimonial-single">                   
                                   <div class="testimonial-info">
